[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.5.0-dev.2"
hdk = "=0.4.0-dev.2"
serde = "1.0"

[workspace.dependencies.library]
path = "dnas/tools/zomes/coordinator/library"

[workspace.dependencies.library_integrity]
path = "dnas/tools/zomes/integrity/library"
