version = "0.0.5"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.1"
hdk = "=0.3.1"
serde = "1.0"

[workspace.dependencies.library]
path = "dnas/tools/zomes/coordinator/library"

[workspace.dependencies.library_integrity]
path = "dnas/tools/zomes/integrity/library"
